# StockBee

./: .gitignore  CMakeLists.txt  NASDAQtickers.txt  OUTPUT.csv  README.md  ReadMe.md  Screener.py  main.cpp
DATA/: AACG.csv  AACQ.csv  AACQU.csv  AAL.csv  AAME.csv  AAOI.csv  AAON.csv  AAWW.csv  AAXJ.csv  ABCB.csv  ABCM.csv  ABEO.csv  ABGI.csv  ABIO.csv  ABMD.csv  ABNB.csv  ABST.csv  ABUS.csv  ACAC.csv  ACACU.csv  ACACW.csv  ACAD.csv  ACBI.csv  ACCD.csv  ACER.csv  ACET.csv  ACEV.csv  ACEVU.csv  ACGL.csv  ACGLO.csv  ACGLP.csv  ACHC.csv  ACHV.csv  ACIU.csv  ACIW.csv  ACKIU.csv  ACLS.csv  ACNB.csv  ACOR.csv  ACRS.csv  (+9 more)
PYTHON/: Screener.py
Python/: pyScreener.py
include/: indicators.h  main.h  ticker.h  yahooAPI.h
src/: indicators.cpp  ticker.cpp  yahooAPI.cpp
